objects/BusinessYearManage__c.object
<CustomObject>
    <fields>
        <fullName>BusinessYear__c</fullName>
        <label>対象年度</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CalendarDistributeAmount__c</fullName>
        <label>カレンダー配布数</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先責任者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>年度管理</relationshipLabel>
        <relationshipName>BusinessYearManages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DiaryDistributeAmount__c</fullName>
        <label>手帳配布数</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DistoributeType__c</fullName>
        <label>配布</label>
        <picklist>
            <picklistValues>
                <fullName>未配布</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>カレンダー＆手帳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>カレンダーのみ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>手帳のみ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>断られた</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsEventPerticipate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>イベント参加</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPCPriceRevisionAddressee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PC料金改定送付先</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUMParticipate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>UM参加</description>
        <inlineHelpText>UM参加者はチェックを入れる。</inlineHelpText>
        <label>UM参加</label>
        <type>Checkbox</type>
    </fields>
    <label>年度管理</label>
    <nameField>
        <label>年度</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>